add zeldman to bibliography

--- a/_includes/LIS_861_Spring_2014_bibliography.html
+++ b/_includes/LIS_861_Spring_2014_bibliography.html
@@ -11,3 +11,10 @@ https://medium.com/learning-to-code/565fc9dcb329</a>.</li>
 <li>Robson, E., & Freeman, E. (2006). <em>Head first HTML with CSS & XHTML.</em> 
 Sebastopol, Calif.: O'Reilly.</li>
 </ul>
+
+<li>Robson, E., & Freeman, E. (2006). <em>Head first HTML with CSS & XHTML.</em> 
+Sebastopol, Calif.: O'Reilly.</li>
+</ul>
+
+<li>Zeldman, J. (2010). <em>Designing with Web Standards</em>, (2nd ed.).
+Berkeley, CA: New Riders.</li>
