--- a/_includes/LIS_861_Spring_2014_bibliography.html
+++ b/_includes/LIS_861_Spring_2014_bibliography.html
@@ -3,18 +3,70 @@
 <h3>Bibliography</h3>
 
 <ul class="bibliography">
-<li>Carver, C. (2013, November 22.) Things I Wish Someone Had Told Me When I Was 
-Learning How to Code.  <em>Medium.com.</em>  Retrieved January 18, 2014 from 
-<a href="https://medium.com/learning-to-code/565fc9dcb329">
-https://medium.com/learning-to-code/565fc9dcb329</a>.</li>
+  <li>
+    Adobe Systems Incorporated. (2014) <em>Adobe Kuler.</em>  Retrieved February 4, 2014 from 
+    <a href="https://kuler.adobe.com/">https://kuler.adobe.com/</a>.
+  </li>
+  
+  <li>
+    Carver, C. (2013, November 22.) Things I Wish Someone Had Told Me When I Was 
+    Learning How to Code.  <em>Medium.com.</em>  Retrieved January 18, 2014 from 
+    <a href="https://medium.com/learning-to-code/565fc9dcb329">
+    https://medium.com/learning-to-code/565fc9dcb329</a>.
+  </li>
+  
+  <li>
+    Chimero, F. (2013, November) What Screens Want. <em>FrankChimero.com.</em>  Retrieved February 4, 2014 from 
+    <a href="http://frankchimero.com/what-screens-want/">http://frankchimero.com/what-screens-want/</a>.
+  </li>
+  
+  <li>
+    Colaluca, J. (2013) <em>design seeds.</em>  Retrieved February 4, 2014 from 
+    <a href="http://design-seeds.com/">http://design-seeds.com/</a>.
+  </li>
+  
+  <li>
+    Google. (2014) <em>Google Fonts.</em>  Retrieved February 4, 2014 from 
+    <a href="http://www.google.com/webfonts">http://www.google.com/webfonts</a>.
+  </li>
+  
+  <li>
+    Nelson, T. (1981). <em>Literary Machines: The report on, and of, Project 
+    Xanadu concerning word processing, electronic publishing, hypertext, 
+    thinkertoys, tomorrow's intellectual revolution, and certain other topics 
+    including knowledge, education and freedom</em>. Sausalito, CA: Mindful Press.
+  </li>
 
-<li>Robson, E., & Freeman, E. (2006). <em>Head first HTML with CSS & XHTML.</em> 
-Sebastopol, Calif.: O'Reilly.</li>
+  <li>
+    Norman, D. (2013). <em>The Design of Everyday Things: Revised and Expanded 
+    Edition</em>, (3rd ed.). New York, NY: Basic Books.
+  </li>
+
+  <li>
+    Posner, M. (2011, November.) Useful CSS. <em>MiriamPosner.com.</em>  Retrieved 
+    February 4, 2014 from 
+    <a href="http://miriamposner.com/blog/wp-content/uploads/2011/11/usefulcss.pdf">
+    http://miriamposner.com/blog/wp-content/uploads/2011/11/usefulcss.pdf</a>.
+  </li>
+  
+  <li>
+    Robson, E., & Freeman, E. (2006). <em>Head first HTML with CSS & XHTML.</em> 
+    Sebastopol, Calif.: O'Reilly.
+  </li>
+  
+  <li>
+    Rutter, R. (2010) <em>The Elements of Typographic Style Applied
+    to the Web.</em>  Retrieved February 4, 2014 from 
+    <a href="http://webtypography.net/">http://webtypography.net/</a>.
+  </li>
+  
+  <li>
+    Williams, R. (2008). <em>The Non-Designer's Design Book</em>, (3rd ed.).
+    Berkeley, CA: Peachpit Press.
+  </li>
+
+  <li>
+    Zeldman, J. (2010). <em>Designing with Web Standards</em>, (2nd ed.).
+    Berkeley, CA: New Riders.
+  </li>
 </ul>
-
-<li>Robson, E., & Freeman, E. (2006). <em>Head first HTML with CSS & XHTML.</em> 
-Sebastopol, Calif.: O'Reilly.</li>
-</ul>
-
-<li>Zeldman, J. (2010). <em>Designing with Web Standards</em>, (2nd ed.).
-Berkeley, CA: New Riders.</li>
