--- a/_includes/LIS_861_Spring_2014_bibliography.html
+++ b/_includes/LIS_861_Spring_2014_bibliography.html
@@ -9,6 +9,16 @@
   </li>
   
   <li>
+    <em>Bootstrap</em>  Retrieved February 10, 2014 from 
+    <a href="http://getbootstrap.com/">http://getbootstrap.com/</a>.
+  </li>
+
+  <li>
+    Allsopp, J. (2000, April 7) A Dao of Web Design. <em>A List Apart.</em>  Retrieved February 10, 2014 from 
+    <a href="http://alistapart.com/article/dao">http://alistapart.com/article/dao</a>.
+  </li>
+
+  <li>
     Carver, C. (2013, November 22.) Things I Wish Someone Had Told Me When I Was 
     Learning How to Code.  <em>Medium.com.</em>  Retrieved January 18, 2014 from 
     <a href="https://medium.com/learning-to-code/565fc9dcb329">
@@ -21,6 +31,11 @@
   </li>
   
   <li>
+    Clark, J. (2013). <em>Building Mobile Library Applications</em> (THE TECH SET® 
+    #12). Chicago: ALA TechSource.
+  </li>
+
+  <li>
     Colaluca, J. (2013) <em>design seeds.</em>  Retrieved February 4, 2014 from 
     <a href="http://design-seeds.com/">http://design-seeds.com/</a>.
   </li>
@@ -30,6 +45,22 @@
     <a href="http://www.google.com/webfonts">http://www.google.com/webfonts</a>.
   </li>
   
+  <li>
+    Hanson, C. W. (2011). Chapter 3: Mobile Solutions for Your Library. <em>Library 
+    Technology Reports, 47(2)</em>, 24-31.
+  </li>
+
+  <li>
+    Marcotte, E. (2010, May 25) Responsive Web Design. <em>A List Apart.</em>  
+    Retrieved February 10, 2014 from 
+    <a href="http://alistapart.com/article/responsive-web-design"http://alistapart.com/article/responsive-web-design</a>.
+  </li>
+  
+  <li>
+    McGrane, K. (2013, November 21) Responsive Design Won’t Fix Your Content Problem]. <em>A List Apart.</em>  Retrieved February 10, 2014 from 
+    <a href="http://alistapart.com/column/responsive-design-wont-fix-your-content-problem">http://alistapart.com/column/responsive-design-wont-fix-your-content-problem</a>.
+  </li>
+
   <li>
     Nelson, T. (1981). <em>Literary Machines: The report on, and of, Project 
     Xanadu concerning word processing, electronic publishing, hypertext, 
@@ -41,6 +72,18 @@
     Norman, D. (2013). <em>The Design of Everyday Things: Revised and Expanded 
     Edition</em>, (3rd ed.). New York, NY: Basic Books.
   </li>
+  
+  <li>
+    Pew Internet & American Life Project. (2013) <em>Cell Internet Use 2013</em>.
+    Retrieved February 10, 2014 from <a href="http://pewinternet.org/Reports/2013/Cell-Internet.aspx">
+    http://pewinternet.org/Reports/2013/Cell-Internet.aspx</a>.
+  </li>
+
+  <li>
+    Pew Internet & American Life Project. (2013) <em>Smartphone Ownership 2013</em>.
+    Retrieved February 10, 2014 from <a href="http://pewinternet.org/Reports/2013/Smartphone-Ownership-2013.aspx">
+    http://pewinternet.org/Reports/2013/Smartphone-Ownership-2013.aspx</a>.
+  </li>
 
   <li>
     Posner, M. (2011, November.) Useful CSS. <em>MiriamPosner.com.</em>  Retrieved 
@@ -49,6 +92,16 @@
     http://miriamposner.com/blog/wp-content/uploads/2011/11/usefulcss.pdf</a>.
   </li>
   
+  <li>
+    Reidsma, M. (2012, April 25) Control Issues. <em>Matthew Reidsma.</em>  Retrieved February 10, 2014 from 
+    <a href="hhttp://matthew.reidsrow.com/articles/19">http://matthew.reidsrow.com/articles/19</a>.
+  </li>
+
+  <li>
+    Reidsma, M. (2012, June 25) Responsive Web Design for Libraries. <em>Matthew Reidsma.</em>  Retrieved February 10, 2014 from 
+    <a href="hhttp://matthew.reidsrow.com/articles/23">http://matthew.reidsrow.com/articles/23</a>.
+  </li>
+
   <li>
     Robson, E., & Freeman, E. (2006). <em>Head first HTML with CSS & XHTML.</em> 
     Sebastopol, Calif.: O'Reilly.
