week 5 bibliography and include complete

--- a/_includes/LIS_861_Spring_2014_bibliography.html
+++ b/_includes/LIS_861_Spring_2014_bibliography.html
@@ -17,7 +17,12 @@
     Allsopp, J. (2000, April 7) A Dao of Web Design. <em>A List Apart.</em>  Retrieved February 10, 2014 from 
     <a href="http://alistapart.com/article/dao">http://alistapart.com/article/dao</a>.
   </li>
-
+  
+  <li>
+    Byron, A., Berry, A., & DeBondt, B. (2012). <em>Using Drupal</em>. 2nd ed. 
+    Sebastopol, CA: O'Reilly.
+  </li>
+  
   <li>
     Carver, C. (2013, November 22.) Things I Wish Someone Had Told Me When I Was 
     Learning How to Code.  <em>Medium.com.</em>  Retrieved January 18, 2014 from 
@@ -41,13 +46,34 @@
   </li>
   
   <li>
+    Goodman, A. (2013) The Done in WordPress series. <em>ALA TechSource Blog.</em> 
+    Retrieved February 17, 2014 from <a href="http://www.alatechsource.org/wordpress">
+    http://www.alatechsource.org/wordpress</a>.
+  </li>
+  
+  <li>
+    Goodman, A. (2014). <em>The Comparative Guide to WordPress in Libraries: A 
+    LITA Guide</em>. Chicago: ALA TechSource.
+  </li>
+  
+  <li>
     Google. (2014) <em>Google Fonts.</em>  Retrieved February 4, 2014 from 
     <a href="http://www.google.com/webfonts">http://www.google.com/webfonts</a>.
   </li>
   
   <li>
+    Halvorson, K., & Rach, M. (2012). <em>Content Strategy for the Web</em>, 
+    (2nd ed.). Berkeley, CA: New Riders.
+  </li>
+  
+  <li>
     Hanson, C. W. (2011). Chapter 3: Mobile Solutions for Your Library. <em>Library 
     Technology Reports, 47(2)</em>, 24-31.
+  </li>
+
+  <li>
+    Jones, K. M. L., & Farrington, P. (2011). Using WordPress as a Library Content 
+    Management System. <em>Library Technology Reports, 47(3)</em>.
   </li>
 
   <li>
@@ -111,6 +137,22 @@
     Rutter, R. (2010) <em>The Elements of Typographic Style Applied
     to the Web.</em>  Retrieved February 4, 2014 from 
     <a href="http://webtypography.net/">http://webtypography.net/</a>.
+  </li>
+  
+  <li>
+    Schmidt, A., & Etches, A. (2012). <em>User Experience (UX) Design for 
+    Libraries: (THE TECH SET® #18)</em>. Chicago: ALA Editions.
+  </li>
+  
+  <li>
+    Varnum, K. J. (2012). <em>Drupal in libraries</em>. Chicago: ALA TechSource.
+  </li>
+  
+  <li>
+    Veen, J. (2010) <em>Doing a Content Inventory (Or, A Mind-Numbingly Detailed 
+    Odyssey Through Your Web Site).</em>  Retrieved February 17, 2014 from 
+    <a href="http://www.adaptivepath.com/ideas/doing-content-inventory/">
+    http://www.adaptivepath.com/ideas/doing-content-inventory/</a>.
   </li>
   
   <li>
