adds accessibility notes and final project assignment descriptions

--- a/_includes/LIS_861_Spring_2014_assignments.html
+++ b/_includes/LIS_861_Spring_2014_assignments.html
@@ -29,10 +29,10 @@
     <td>Final project...</td><td></td><td></td>
   </tr>
   <tr>
-    <td class="table_indent">...one-pager</td><td>10</td><td>March 14</td>
+    <td class="table_indent"><a href="./assignments/one_pager.html">...one-pager</a></td><td>10</td><td>March 30</td>
   </tr>
   <tr>
-    <td class="table_indent">...final deliverable</td><td>35</td><td>May 16</td>
+    <td class="table_indent"><a href="./assignments/final_project.html">...final deliverable</a></td><td>35</td><td>May 16</td>
   </tr>
   <tr>
     <td><a href="./assignments/failure_assessment.html">Failure assessment</a></td><td>5</td><td>May 16</td>
