--- a/_includes/LIS_861_Spring_2014_bibliography.html
+++ b/_includes/LIS_861_Spring_2014_bibliography.html
@@ -86,6 +86,11 @@
     McGrane, K. (2013, November 21) Responsive Design Won’t Fix Your Content Problem]. <em>A List Apart.</em>  Retrieved February 10, 2014 from 
     <a href="http://alistapart.com/column/responsive-design-wont-fix-your-content-problem">http://alistapart.com/column/responsive-design-wont-fix-your-content-problem</a>.
   </li>
+  
+  <li>
+    Morville, P., & Rosenfeld, L. (2006). <em>Information architecture for the 
+    World Wide Web</em>. 3rd ed. Sebastopol, Calif.: O'Reilly.
+  </li>
 
   <li>
     Nelson, T. (1981). <em>Literary Machines: The report on, and of, Project 
