--- a/_includes/LIS_861_Spring_2014_bibliography.html
+++ b/_includes/LIS_861_Spring_2014_bibliography.html
@@ -70,16 +70,34 @@
     Hanson, C. W. (2011). Chapter 3: Mobile Solutions for Your Library. <em>Library 
     Technology Reports, 47(2)</em>, 24-31.
   </li>
+  
+  <li>
+    Hess, W. (2009). DIY UX: Give Your Users an Upgrade (Without Calling In a Pro). 
+    [PowerPoint slides]. Retrieved March 24, 2014 from 
+    [http://www.slideshare.net/whitneyhess/diy-ux](http://www.slideshare.net/whitneyhess/diy-ux).
+  </li>
 
   <li>
     Jones, K. M. L., & Farrington, P. (2011). Using WordPress as a Library Content 
     Management System. <em>Library Technology Reports, 47(3)</em>.
   </li>
+  
+  <li>
+    Krug, S. (2006). <em>Don't make me think! : a common sense approach to Web 
+    usability.</em> 2nd ed. Berkeley, Calif: New Riders Pub.  (This is the 
+    edition available at the UW library, but the 3rd edition is also fine, and
+    has the same chapter numbering for the ones we will be reading.)
+  </li>
+  
+  <li>
+    Kupersmith, John. (2012). Library Terms That Users Understand. UC Berkeley: UC 
+    Berkeley Library. Retrieved March 23, 2014 from: <a href="http://escholarship.org/uc/item/3qq499w7">http://escholarship.org/uc/item/3qq499w7</a>
+  </li>
 
   <li>
     Marcotte, E. (2010, May 25) Responsive Web Design. <em>A List Apart.</em>  
     Retrieved February 10, 2014 from 
-    <a href="http://alistapart.com/article/responsive-web-design"http://alistapart.com/article/responsive-web-design</a>.
+    <a href="http://alistapart.com/article/responsive-web-design">http://alistapart.com/article/responsive-web-design</a>.
   </li>
   
   <li>
@@ -124,13 +142,19 @@
   </li>
   
   <li>
+    Reidsma, M. (2012, March 19) Your Library Website Stinks and It's Your Fault. 
+    <em>Matthew Reidsma.</em> Retrieved March 23, 2014 from 
+    <a href="http://matthew.reidsrow.com/articles/16">http://matthew.reidsrow.com/articles/16</a>.
+  </li>
+  
+  <li>
     Reidsma, M. (2012, April 25) Control Issues. <em>Matthew Reidsma.</em>  Retrieved February 10, 2014 from 
-    <a href="hhttp://matthew.reidsrow.com/articles/19">http://matthew.reidsrow.com/articles/19</a>.
+    <a href="http://matthew.reidsrow.com/articles/19">http://matthew.reidsrow.com/articles/19</a>.
   </li>
 
   <li>
     Reidsma, M. (2012, June 25) Responsive Web Design for Libraries. <em>Matthew Reidsma.</em>  Retrieved February 10, 2014 from 
-    <a href="hhttp://matthew.reidsrow.com/articles/23">http://matthew.reidsrow.com/articles/23</a>.
+    <a href="http://matthew.reidsrow.com/articles/23">http://matthew.reidsrow.com/articles/23</a>.
   </li>
 
   <li>
@@ -145,8 +169,20 @@
   </li>
   
   <li>
+    Schmidt, A. (2013, September 24) Catalog by Design. <em>Walking Paper.</em>  
+    Retrieved March 23, 2014 from 
+    <a href="http://www.walkingpaper.org/5979">http://www.walkingpaper.org/5979</a>.
+  </li>
+  
+  <li>
     Schmidt, A., & Etches, A. (2012). <em>User Experience (UX) Design for 
     Libraries: (THE TECH SET® #18)</em>. Chicago: ALA Editions.
+  </li>
+  
+  <li>
+    Usborne, N. (2005, November 8) Design Choices Can Cripple a Website. <em>A List Apart.</em>  
+    Retrieved March 23, 2014 from 
+    <a href="http://alistapart.com/article/designcancripple">http://alistapart.com/article/designcancripple</a>.
   </li>
   
   <li>
@@ -158,6 +194,12 @@
     Odyssey Through Your Web Site).</em>  Retrieved February 17, 2014 from 
     <a href="http://www.adaptivepath.com/ideas/doing-content-inventory/">
     http://www.adaptivepath.com/ideas/doing-content-inventory/</a>.
+  </li>
+  
+  <li>
+    Williams, M. (2013, August 9) User Experience vs. the World. <em>New Jack Librarian.</em>  
+    Retrieved March 23, 2014 from 
+    <a href="http://librarian.newjackalmanac.ca/2013/08/user-experience-vs-world.html">http://librarian.newjackalmanac.ca/2013/08/user-experience-vs-world.html</a>.
   </li>
   
   <li>
