--- a/_includes/LIS_861_Spring_2014_bibliography.html
+++ b/_includes/LIS_861_Spring_2014_bibliography.html
@@ -74,7 +74,7 @@
   <li>
     Hess, W. (2009). DIY UX: Give Your Users an Upgrade (Without Calling In a Pro). 
     [PowerPoint slides]. Retrieved March 24, 2014 from 
-    [http://www.slideshare.net/whitneyhess/diy-ux](http://www.slideshare.net/whitneyhess/diy-ux).
+    <a href="http://www.slideshare.net/whitneyhess/diy-ux">http://www.slideshare.net/whitneyhess/diy-ux</a>.
   </li>
 
   <li>
