--- a/_includes/LIS_861_Spring_2014_bibliography.html
+++ b/_includes/LIS_861_Spring_2014_bibliography.html
@@ -19,6 +19,12 @@
   </li>
   
   <li>
+    Brignull, H. (2011, November 1) Dark Patterns: Deception vs. Honesty in UI Design. <em>A List Apart.</em>  
+    Retrieved April 1, 2014 from 
+    <a href="http://alistapart.com/article/dark-patterns-deception-vs.-honesty-in-ui-design">http://alistapart.com/article/dark-patterns-deception-vs.-honesty-in-ui-design</a>.
+  </li>
+  
+  <li>
     Byron, A., Berry, A., & DeBondt, B. (2012). <em>Using Drupal</em>. 2nd ed. 
     Sebastopol, CA: O'Reilly.
   </li>
@@ -43,6 +49,17 @@
   <li>
     Colaluca, J. (2013) <em>design seeds.</em>  Retrieved February 4, 2014 from 
     <a href="http://design-seeds.com/">http://design-seeds.com/</a>.
+  </li>
+  
+  <li>
+    Cooper, A. (1999). <em>The inmates are running the asylum.</em> Indianapolis,
+    IN: Sams.
+  </li>
+  
+  <li>
+    Gelman, D. L. (2011, February 8) Designing Web Registration Processes for Kids. 
+    <em>A List Apart.</em> Retrieved April 1, 2014 from 
+    <a href="http://alistapart.com/article/designing-web-registration-forms-for-kids">http://alistapart.com/article/designing-web-registration-forms-for-kids</a>.
   </li>
   
   <li>
@@ -76,6 +93,11 @@
     [PowerPoint slides]. Retrieved March 24, 2014 from 
     <a href="http://www.slideshare.net/whitneyhess/diy-ux">http://www.slideshare.net/whitneyhess/diy-ux</a>.
   </li>
+  
+  <li>
+     Hill, N. (n.d.). DPLA Use Cases. <em>natehill.net</em>. Retrieved April 1, 
+     2014, from <a href="http://natehill.net/dplausecases/">http://natehill.net/dplausecases/</a>.
+  </li>
 
   <li>
     Jones, K. M. L., & Farrington, P. (2011). Using WordPress as a Library Content 
@@ -94,6 +116,13 @@
     Berkeley Library. Retrieved March 23, 2014 from: <a href="http://escholarship.org/uc/item/3qq499w7">http://escholarship.org/uc/item/3qq499w7</a>
   </li>
 
+  <li>
+    Loranger, H., & Nielsen, J. (2013, February 3) Teenage Usability: Designing 
+    Teen-Targeted Websites. <em>NN/g Nielsen Norman Group</em>  
+    Retrieved April 1, 2014 from 
+    <a href="http://www.nngroup.com/articles/usability-of-websites-for-teenagers/">http://www.nngroup.com/articles/usability-of-websites-for-teenagers/</a>.
+  </li>
+  
   <li>
     Marcotte, E. (2010, May 25) Responsive Web Design. <em>A List Apart.</em>  
     Retrieved February 10, 2014 from 
@@ -116,7 +145,20 @@
     thinkertoys, tomorrow's intellectual revolution, and certain other topics 
     including knowledge, education and freedom</em>. Sausalito, CA: Mindful Press.
   </li>
+  
+  <li>
+    Nicol, E. C. & O'English, M. (2012). Rising Tides: Faculty Expectations of 
+    Library Websites. <em>portal: Libraries and the Academy</em> 12(4), 371-386. 
+    The Johns Hopkins University Press. Retrieved April 1, 2014, from Project MUSE 
+    database.
+  </li>
 
+  <li>
+    Nielsen, J. (2010, September 13) Children's Websites: Usability Issues in 
+    Designing for Kids. <em>NN/g Nielsen Norman Group</em> Retrieved April 1, 2014 
+    from <a href="http://www.nngroup.com/articles/childrens-websites-usability-issues/">http://www.nngroup.com/articles/childrens-websites-usability-issues/</a>.
+  </li>
+  
   <li>
     Norman, D. (2013). <em>The Design of Everyday Things: Revised and Expanded 
     Edition</em>, (3rd ed.). New York, NY: Basic Books.
@@ -163,9 +205,27 @@
   </li>
   
   <li>
+    Rohrer, C. (2008, October 6) When to Use Which User Experience Research 
+    Methods. <em>NN/g Nielsen Norman Group</em> Retrieved April 1, 2014 from 
+    <a href="http://www.nngroup.com/articles/which-ux-research-methods/">http://www.nngroup.com/articles/which-ux-research-methods/</a>.
+  </li>
+  
+  <li>
     Rutter, R. (2010) <em>The Elements of Typographic Style Applied
     to the Web.</em>  Retrieved February 4, 2014 from 
     <a href="http://webtypography.net/">http://webtypography.net/</a>.
+  </li>
+  
+  <li>
+    Scenarios. (n.d.). In <em>DPLA wiki</em>. Retrieved April 1, 2014, from 
+    <a href="http://dp.la/wiki/Scenarios">http://dp.la/wiki/Scenarios</a>.
+  </li>
+  
+  <li>
+    Schade, A. (2014, March 2) Designing for 5 Types of E-Commerce Shoppers. 
+    <em>NN/g Nielsen Norman Group</em>  
+    Retrieved April 1, 2014 from 
+    <a href="http://www.nngroup.com/articles/ecommerce-shoppers/">http://www.nngroup.com/articles/ecommerce-shoppers/</a>.
   </li>
   
   <li>
@@ -194,6 +254,13 @@
     Odyssey Through Your Web Site).</em>  Retrieved February 17, 2014 from 
     <a href="http://www.adaptivepath.com/ideas/doing-content-inventory/">
     http://www.adaptivepath.com/ideas/doing-content-inventory/</a>.
+  </li>
+  
+  <li>
+    Vilhauer, C. (2012, Februrary 28) Audiences, Outcomes, and Determining User 
+    Needs. <em>A List Apart.</em>  
+    Retrieved April 1, 2014 from 
+    <a href="http://alistapart.com/article/audiences-outcomes-and-determining-user-needs">http://alistapart.com/article/audiences-outcomes-and-determining-user-needs</a>.
   </li>
   
   <li>
