--- a/_includes/LIS_861_Spring_2014_bibliography.html
+++ b/_includes/LIS_861_Spring_2014_bibliography.html
@@ -14,6 +14,11 @@
   </li>
 
   <li>
+    BrowserStack. (2014) <em>BrowserStack</em>  Retrieved April 4, 2014 from 
+    <a href="http://www.browserstack.com/">http://www.browserstack.com/</a>.
+  </li>
+
+  <li>
     Allsopp, J. (2000, April 7) A Dao of Web Design. <em>A List Apart.</em>  Retrieved February 10, 2014 from 
     <a href="http://alistapart.com/article/dao">http://alistapart.com/article/dao</a>.
   </li>
@@ -57,6 +62,23 @@
   </li>
   
   <li>
+    Coyier, C. [realcsstricks]. (2012, February 29). <em>Screencast #106: Use 
+    BrowserStack for Live Web-Based Cross Browser Testing</em> [Video file]. 
+    Retrieved April 4, 2014 
+    from <a href="https://www.youtube.com/watch?v=bfp2vt6JueQ">https://www.youtube.com/watch?v=bfp2vt6JueQ</a>.
+  </li>
+  
+  <li>
+    <em>Crazy Egg.</em>  Retrieved April 4, 2014 from 
+    <a href="http://www.crazyegg.com/">http://www.crazyegg.com/</a>.
+  </li>
+  
+  <li>
+    Farney, F., & McHale, N. (2011). Maximizing Google Analytics: Six High-Impact 
+    Practices.  <em>Library Technology Reports, 49(4)</em>.
+  </li>
+  
+  <li>
     Gelman, D. L. (2011, February 8) Designing Web Registration Processes for Kids. 
     <em>A List Apart.</em> Retrieved April 1, 2014 from 
     <a href="http://alistapart.com/article/designing-web-registration-forms-for-kids">http://alistapart.com/article/designing-web-registration-forms-for-kids</a>.
@@ -79,6 +101,11 @@
   </li>
   
   <li>
+    Google. (2014) <em>Google Analytics.</em>  Retrieved April 4, 2014 from 
+    <a href="http://www.google.com/analytics">http://www.google.com/analytics</a>.
+  </li>
+  
+  <li>
     Halvorson, K., & Rach, M. (2012). <em>Content Strategy for the Web</em>, 
     (2nd ed.). Berkeley, CA: New Riders.
   </li>
@@ -95,8 +122,8 @@
   </li>
   
   <li>
-     Hill, N. (n.d.). DPLA Use Cases. <em>natehill.net</em>. Retrieved April 1, 
-     2014, from <a href="http://natehill.net/dplausecases/">http://natehill.net/dplausecases/</a>.
+    Hill, N. (n.d.). DPLA Use Cases. <em>natehill.net</em>. Retrieved April 1, 
+    2014, from <a href="http://natehill.net/dplausecases/">http://natehill.net/dplausecases/</a>.
   </li>
 
   <li>
@@ -112,8 +139,23 @@
   </li>
   
   <li>
+    Krug, S. (2010). <em>Rocket surgery made easy : the do-it-yourself guide to 
+    finding and fixing usability problems.</em> Berkeley, Calif.: New Riders.
+  </li>
+  
+  <li>
+    Krug, S. (2010) <em>Usability Test Script</em>. Retrieved April 4, 2014, from
+    <a href="http://sensible.com/downloads/test-script.pdf">http://sensible.com/downloads/test-script.pdf</a>.
+  </li>
+  
+  <li>
     Kupersmith, John. (2012). Library Terms That Users Understand. UC Berkeley: UC 
     Berkeley Library. Retrieved March 23, 2014 from: <a href="http://escholarship.org/uc/item/3qq499w7">http://escholarship.org/uc/item/3qq499w7</a>
+  </li>
+  
+  <li>
+    Lehman, T., & Nikkel, T. (2008). <em>Making library Web sites usable : a LITA 
+    guide.</em> New York: Neal-Schuman Publishers.
   </li>
 
   <li>
@@ -154,6 +196,24 @@
   </li>
 
   <li>
+    Nielsen, J. (1995, January 1) 10 Usability Heuristics for User Interface Design. 
+    <em>NN/g Nielsen Norman Group</em> Retrieved April 4, 2014 from 
+    <a href="http://www.nngroup.com/articles/ten-usability-heuristics/">http://www.nngroup.com/articles/ten-usability-heuristics/</a>.
+  </li>
+  
+  <li>
+    Nielsen, J. (1995, January 1) Characteristics of Usability Problems Found by 
+    Heuristic Evaluation. <em>NN/g Nielsen Norman Group</em> Retrieved April 4, 
+    2014 from <a href="http://www.nngroup.com/articles/usability-problems-found-by-heuristic-evaluation/">http://www.nngroup.com/articles/usability-problems-found-by-heuristic-evaluation/</a>.
+  </li>
+  
+  <li>
+    Nielsen, J. (1995, January 1) How to Conduct a Heuristic Evaluation. 
+    <em>NN/g Nielsen Norman Group</em> Retrieved April 4, 2014 from 
+    <a href="http://www.nngroup.com/articles/how-to-conduct-a-heuristic-evaluation/">http://www.nngroup.com/articles/how-to-conduct-a-heuristic-evaluation/</a>.
+  </li>
+  
+  <li>
     Nielsen, J. (2010, September 13) Children's Websites: Usability Issues in 
     Designing for Kids. <em>NN/g Nielsen Norman Group</em> Retrieved April 1, 2014 
     from <a href="http://www.nngroup.com/articles/childrens-websites-usability-issues/">http://www.nngroup.com/articles/childrens-websites-usability-issues/</a>.
@@ -184,6 +244,11 @@
   </li>
   
   <li>
+    Reidsma, M. (2011, November 15) How We Do Usability Testing. <em>Matthew Reidsma.</em>  Retrieved April 4, 2014 from 
+    <a href="http://matthew.reidsrow.com/articles/13">http://matthew.reidsrow.com/articles/13</a>.
+  </li>
+
+  <li>
     Reidsma, M. (2012, March 19) Your Library Website Stinks and It's Your Fault. 
     <em>Matthew Reidsma.</em> Retrieved March 23, 2014 from 
     <a href="http://matthew.reidsrow.com/articles/16">http://matthew.reidsrow.com/articles/16</a>.
@@ -208,6 +273,12 @@
     Rohrer, C. (2008, October 6) When to Use Which User Experience Research 
     Methods. <em>NN/g Nielsen Norman Group</em> Retrieved April 1, 2014 from 
     <a href="http://www.nngroup.com/articles/which-ux-research-methods/">http://www.nngroup.com/articles/which-ux-research-methods/</a>.
+  </li>
+  
+  <li>
+    Rosoff, J. [jjasonrr]. (2011, May 12). <em>Introduction to Crazyegg Click 
+    tracking and some baseline results</em> [Video file]. Retrieved April 4, 2014 
+    from <a href="https://www.youtube.com/watch?v=2APO_hJpR9A">https://www.youtube.com/watch?v=2APO_hJpR9A</a>.
   </li>
   
   <li>
@@ -237,6 +308,11 @@
   <li>
     Schmidt, A., & Etches, A. (2012). <em>User Experience (UX) Design for 
     Libraries: (THE TECH SET® #18)</em>. Chicago: ALA Editions.
+  </li>
+  
+  <li>
+    US Department of Health and Human Services. (2014) <em>usability.gov</em>.
+    Retrieved April 4, 2014 from <a href="http://www.usability.gov/">http://www.usability.gov/</a>.
   </li>
   
   <li>
