--- a/_includes/LIS_861_Spring_2014_assignments.html
+++ b/_includes/LIS_861_Spring_2014_assignments.html
@@ -20,10 +20,10 @@
     <td><a href="./assignments/web_site_version_1.html">Web site version 1.0</a></td><td>10</td><td>February 24</td>
   </tr>
   <tr>
-    <td><a href="./assignments/accessibility_evaluation.html">Accessibility evaluation</a></td><td>15</td><td>April 21</td>
+    <td><a href="./assignments/accessibility_evaluation.html">Accessibility evaluation</a></td><td>10</td><td>April 21</td>
   </tr>
   <tr>
-    <td>Web site version 2.0</td><td>15</td><td>April 28</td>
+    <td><a href="./assignments/web_site_version_2.html">Web site version 2.0</a></td><td>15</td><td>April 28</td>
   </tr>
   <tr>
     <td>Final project...</td><td></td><td></td>
