weeks 12 and 13, ignore very large files

--- a/_includes/LIS_861_Spring_2014_bibliography.html
+++ b/_includes/LIS_861_Spring_2014_bibliography.html
@@ -132,6 +132,12 @@
   </li>
   
   <li>
+    Junus, S. G. R. (2014, February 2) Tools I use when performing accessibility 
+    assessment. <em>blog.rantijunus.net.</em>  Retrieved April 14, 2014 from 
+    <a href="http://blog.rantijunus.net/2014/02/02/tools-i-use-when-performing-accessibility-assessment/">http://blog.rantijunus.net/2014/02/02/tools-i-use-when-performing-accessibility-assessment/</a>.
+  </li>
+
+  <li>
     Krug, S. (2006). <em>Don't make me think! : a common sense approach to Web 
     usability.</em> 2nd ed. Berkeley, Calif: New Riders Pub.  (This is the 
     edition available at the UW library, but the 3rd edition is also fine, and
@@ -220,6 +226,24 @@
   </li>
   
   <li>
+    Ng, C. (2012, October 30) Making Your Website Accessible Part 1: Understanding 
+    WCAG. <em>Learning LibTech.</em>  Retrieved April 14, 2014 from 
+    <a href="http://cynng.wordpress.com/2012/10/30/making-your-website-accessible-part-1-understanding-wcag/">http://cynng.wordpress.com/2012/10/30/making-your-website-accessible-part-1-understanding-wcag/</a>.
+  </li>
+
+  <li>
+    Ng, C. (2013, January 22) Making Your Website Accessible Part 2: Implementing 
+    WCAG into the Structure &amp; Layout. <em>Learning LibTech.</em>  Retrieved April 14, 2014 from 
+    <a href="http://cynng.wordpress.com/2013/01/22/making-your-website-accessible-part-2-implementing-wcag-into-the-structure-layout/">http://cynng.wordpress.com/2013/01/22/making-your-website-accessible-part-2-implementing-wcag-into-the-structure-layout/</a>.
+  </li>
+
+  <li>
+    Ng, C. (2013, April 5) Making Your Website Accessible Part 3: Content WCAG 
+    Compliance. <em>Learning LibTech.</em>  Retrieved April 14, 2014 from 
+    <a href="http://cynng.wordpress.com/2013/04/05/making-your-website-accessible-part-3-content-wcag-compliance/">http://cynng.wordpress.com/2013/04/05/making-your-website-accessible-part-3-content-wcag-compliance/</a>.
+  </li>
+
+  <li>
     Norman, D. (2013). <em>The Design of Everyday Things: Revised and Expanded 
     Edition</em>, (3rd ed.). New York, NY: Basic Books.
   </li>
@@ -262,6 +286,11 @@
   <li>
     Reidsma, M. (2012, June 25) Responsive Web Design for Libraries. <em>Matthew Reidsma.</em>  Retrieved February 10, 2014 from 
     <a href="http://matthew.reidsrow.com/articles/23">http://matthew.reidsrow.com/articles/23</a>.
+  </li>
+  
+  <li>
+    Riley-Huff, D. A. (2012). Web Accessibility and Universal Design. <em>Library 
+    Technology Reports</em>, <em>48</em>(7), 29-35.
   </li>
 
   <li>
@@ -337,6 +366,11 @@
     Needs. <em>A List Apart.</em>  
     Retrieved April 1, 2014 from 
     <a href="http://alistapart.com/article/audiences-outcomes-and-determining-user-needs">http://alistapart.com/article/audiences-outcomes-and-determining-user-needs</a>.
+  </li>
+  
+  <l1>
+    W3C (2014). <em>How to Meet WCAG 2.0.</em> Retrieved April 14, 2014 from
+    <a href="http://www.w3.org/WAI/WCAG20/quickref/">http://www.w3.org/WAI/WCAG20/quickref/</a>.
   </li>
   
   <li>
