--- a/_includes/LIS_861_Spring_2014_bibliography.html
+++ b/_includes/LIS_861_Spring_2014_bibliography.html
@@ -7,7 +7,19 @@
     Adobe Systems Incorporated. (2014) <em>Adobe Kuler.</em>  Retrieved February 4, 2014 from 
     <a href="https://kuler.adobe.com/">https://kuler.adobe.com/</a>.
   </li>
+
+  <li>
+    The Accessibility Project. (2014) <em>The Accessibility Project</em>.
+    Retrieved April 21, 2014 from <a href="http://a11yproject.com/">http://a11yproject.com/</a>.
+  </li>
   
+  <li>
+    Best, K., & Butler, S. (2012). Disability and communication: A consideration 
+    of cross-disability communication and technology. <em>Disability Studies
+    Quarterly</em>, <em>32</em>(4). Retrieved April 21, 2014 from 
+    <a href="http://dsq-sds.org/article/view/3290/3179">http://dsq-sds.org/article/view/3290/3179</a>.
+  </li>
+
   <li>
     <em>Bootstrap</em>  Retrieved February 10, 2014 from 
     <a href="http://getbootstrap.com/">http://getbootstrap.com/</a>.
@@ -42,6 +54,12 @@
   </li>
   
   <li>
+    The Center for Universal Design. (2008) <em>Principles of Universal Design.</em>  
+    Retrieved April 21, 2014 from 
+    <a href="http://www.ncsu.edu/ncsu/design/cud/about_ud/udprinciples.htm">http://www.ncsu.edu/ncsu/design/cud/about_ud/udprinciples.htm</a>.
+  </li>
+  
+  <li>
     Chimero, F. (2013, November) What Screens Want. <em>FrankChimero.com.</em>  Retrieved February 4, 2014 from 
     <a href="http://frankchimero.com/what-screens-want/">http://frankchimero.com/what-screens-want/</a>.
   </li>
@@ -49,6 +67,11 @@
   <li>
     Clark, J. (2013). <em>Building Mobile Library Applications</em> (THE TECH SET® 
     #12). Chicago: ALA TechSource.
+  </li>
+
+  <li>
+    Cohn, J., & Jersey, B. (Directors). (2011). _Eames: The Architect &amp; The 
+    Painter_ [Motion Picture]. United States: First Run Features.
   </li>
 
   <li>
@@ -116,6 +139,20 @@
   </li>
   
   <li>
+    Hendren, S. (2013, September 20.) All Technology Is Assistive Technology: Six 
+    dispositions for designers on disability.  <em>Medium.com.</em>  Retrieved 
+    April 21, 2014 from 
+    <a href="https://medium.com/thoughtful-design/a8b9a581eb62">
+    https://medium.com/thoughtful-design/a8b9a581eb62</a>.
+  </li>
+  
+  <li>
+    Herrod, L. (2008, August 12) Deafness and the User Experience. <em>A List 
+    Apart.</em>  Retrieved April 21, 2014 from 
+    <a href="http://alistapart.com/article/deafnessandtheuserexperience">http://alistapart.com/article/deafnessandtheuserexperience</a>.
+  </li>
+  
+  <li>
     Hess, W. (2009). DIY UX: Give Your Users an Upgrade (Without Calling In a Pro). 
     [PowerPoint slides]. Retrieved March 24, 2014 from 
     <a href="http://www.slideshare.net/whitneyhess/diy-ux">http://www.slideshare.net/whitneyhess/diy-ux</a>.
@@ -137,6 +174,12 @@
     <a href="http://blog.rantijunus.net/2014/02/02/tools-i-use-when-performing-accessibility-assessment/">http://blog.rantijunus.net/2014/02/02/tools-i-use-when-performing-accessibility-assessment/</a>.
   </li>
 
+  <li>
+    Kalbag, L. [LXJS2013]. (2013, October 2). <em>Laura Kalbag - LXJS 2013 - 
+    Designing for accessibility</em> [Video file]. Retrieved April 21, 2014 
+    from <a href="https://www.youtube.com/watch?v=UOM5eY5hG-Q">https://www.youtube.com/watch?v=UOM5eY5hG-Q</a>.
+  </li>
+  
   <li>
     Krug, S. (2006). <em>Don't make me think! : a common sense approach to Web 
     usability.</em> 2nd ed. Berkeley, Calif: New Riders Pub.  (This is the 
@@ -239,13 +282,24 @@
 
   <li>
     Ng, C. (2013, April 5) Making Your Website Accessible Part 3: Content WCAG 
-    Compliance. <em>Learning LibTech.</em>  Retrieved April 14, 2014 from 
-    <a href="http://cynng.wordpress.com/2013/04/05/making-your-website-accessible-part-3-content-wcag-compliance/">http://cynng.wordpress.com/2013/04/05/making-your-website-accessible-part-3-content-wcag-compliance/</a>.
+    Compliance. <em>Learning LibTech.</em>  Retrieved April 21, 2014 from 
+    <a href="http://cynng.wordpress.com/2013/08/16/when-is-a-pdf-accessible/">http://cynng.wordpress.com/2013/08/16/when-is-a-pdf-accessible/</a>.
+  </li>
+
+  <li>
+    Ng, C. (2013, August 16) When is a PDF accessible?. <em>Learning LibTech.</em>  Retrieved April 14, 2014 from 
+    <a href="http://cynng.wordpress.com/2012/10/30/making-your-website-accessible-part-1-understanding-wcag/">http://cynng.wordpress.com/2012/10/30/making-your-website-accessible-part-1-understanding-wcag/</a>.
   </li>
 
   <li>
     Norman, D. (2013). <em>The Design of Everyday Things: Revised and Expanded 
     Edition</em>, (3rd ed.). New York, NY: Basic Books.
+  </li>
+  
+  <li>
+    The Pennsylvania State University. (2014) <em>AccessAbility: Access and 
+    Usability at Penn State: What to Fix</em>. Retrieved April 21, 2014 from 
+    <a href="http://accessibility.psu.edu/whattofix">http://accessibility.psu.edu/whattofix</a>.
   </li>
   
   <li>
@@ -340,6 +394,13 @@
   </li>
   
   <li>
+    Southwell, K. L., and Slater, J. (2013). An Evaluation of Finding Aid 
+    Accessibility for Screen Readers. <em>Information Technology and 
+    Libraries</em>, <em>32</em>(3). Retrieved April 21, 2014 from 
+    <a href="http://ejournals.bc.edu/ojs/index.php/ital/article/view/3423/pdf_1">http://ejournals.bc.edu/ojs/index.php/ital/article/view/3423/pdf_1</a>.
+  </li>
+
+  <li>
     US Department of Health and Human Services. (2014) <em>usability.gov</em>.
     Retrieved April 4, 2014 from <a href="http://www.usability.gov/">http://www.usability.gov/</a>.
   </li>
@@ -350,6 +411,18 @@
     <a href="http://alistapart.com/article/designcancripple">http://alistapart.com/article/designcancripple</a>.
   </li>
   
+  <li>
+    The United States Government. (2014) <em>Section508.gov</em>.
+    Retrieved April 21, 2014 from <a href="http://www.section508.gov/">http://www.section508.gov/</a>.
+  </li>
+  
+  <li>
+    Vandenbark, R. T. (2010). Tending a Wild Garden: Library Web Design for 
+    Persons with Disabilities. <em>Information Technology and Libraries</em>, 
+    <em>29</em>(1). Retrieved April 21, 2014 from 
+    <a href="http://ejournals.bc.edu/ojs/index.php/ital/article/view/3154/2768">http://ejournals.bc.edu/ojs/index.php/ital/article/view/3154/2768</a>.
+  </li>
+
   <li>
     Varnum, K. J. (2012). <em>Drupal in libraries</em>. Chicago: ALA TechSource.
   </li>
