--- a/_includes/LIS_861_Spring_2014_bibliography.html
+++ b/_includes/LIS_861_Spring_2014_bibliography.html
@@ -14,7 +14,19 @@
   </li>
   
   <li>
-    Best, K., & Butler, S. (2012). Disability and communication: A consideration 
+    Allsopp, J. (2000, April 7) A Dao of Web Design. <em>A List Apart.</em>  Retrieved February 10, 2014 from 
+    <a href="http://alistapart.com/article/dao">http://alistapart.com/article/dao</a>.
+  </li>
+  
+  <li>
+    Ballard, A. F, &amp; Teague-Rector, S. (2011). Building a library Web site: 
+    Strategies for success. <em>College &amp; Research Libraries News</em>, 
+    <em>72</em>(3). Retrieved April 28, 2014 from 
+    <a href="http://crln.acrl.org/content/72/3/132.full">http://crln.acrl.org/content/72/3/132.full</a>.
+  </li>
+
+  <li>
+    Best, K., &amp; Butler, S. (2012). Disability and communication: A consideration 
     of cross-disability communication and technology. <em>Disability Studies
     Quarterly</em>, <em>32</em>(4). Retrieved April 21, 2014 from 
     <a href="http://dsq-sds.org/article/view/3290/3179">http://dsq-sds.org/article/view/3290/3179</a>.
@@ -26,23 +38,18 @@
   </li>
 
   <li>
-    BrowserStack. (2014) <em>BrowserStack</em>  Retrieved April 4, 2014 from 
-    <a href="http://www.browserstack.com/">http://www.browserstack.com/</a>.
-  </li>
-
-  <li>
-    Allsopp, J. (2000, April 7) A Dao of Web Design. <em>A List Apart.</em>  Retrieved February 10, 2014 from 
-    <a href="http://alistapart.com/article/dao">http://alistapart.com/article/dao</a>.
-  </li>
-  
-  <li>
     Brignull, H. (2011, November 1) Dark Patterns: Deception vs. Honesty in UI Design. <em>A List Apart.</em>  
     Retrieved April 1, 2014 from 
     <a href="http://alistapart.com/article/dark-patterns-deception-vs.-honesty-in-ui-design">http://alistapart.com/article/dark-patterns-deception-vs.-honesty-in-ui-design</a>.
   </li>
   
   <li>
-    Byron, A., Berry, A., & DeBondt, B. (2012). <em>Using Drupal</em>. 2nd ed. 
+    BrowserStack. (2014) <em>BrowserStack</em>  Retrieved April 4, 2014 from 
+    <a href="http://www.browserstack.com/">http://www.browserstack.com/</a>.
+  </li>
+
+  <li>
+    Byron, A., Berry, A., &amp; DeBondt, B. (2012). <em>Using Drupal</em>. 2nd ed. 
     Sebastopol, CA: O'Reilly.
   </li>
   
@@ -51,6 +58,11 @@
     Learning How to Code.  <em>Medium.com.</em>  Retrieved January 18, 2014 from 
     <a href="https://medium.com/learning-to-code/565fc9dcb329">
     https://medium.com/learning-to-code/565fc9dcb329</a>.
+  </li>
+  
+  <li>
+    Casden, J, &amp; Orphanides, A. (2013, February) <em>Fail4Lib</em>. 
+    Preconference presented at Code4Lib, Chicago, IL.
   </li>
   
   <li>
@@ -70,7 +82,7 @@
   </li>
 
   <li>
-    Cohn, J., & Jersey, B. (Directors). (2011). _Eames: The Architect &amp; The 
+    Cohn, J., &amp; Jersey, B. (Directors). (2011). _Eames: The Architect &amp; The 
     Painter_ [Motion Picture]. United States: First Run Features.
   </li>
 
@@ -97,7 +109,14 @@
   </li>
   
   <li>
-    Farney, F., & McHale, N. (2011). Maximizing Google Analytics: Six High-Impact 
+    Critchlow, M., Freedman, L., &amp; Suchy, D. (2010). Using an Agile-based 
+    Approach to Develop a Library Mobile Website. <em>Code4Lib Journal</em>, 
+    (12). Retrieved April 28, 2014 from 
+    <a href="http://journal.code4lib.org/articles/4642">http://journal.code4lib.org/articles/4642</a>.
+  </li>
+
+  <li>
+    Farney, F., &amp; McHale, N. (2011). Maximizing Google Analytics: Six High-Impact 
     Practices.  <em>Library Technology Reports, 49(4)</em>.
   </li>
   
@@ -107,6 +126,13 @@
     <a href="http://alistapart.com/article/designing-web-registration-forms-for-kids">http://alistapart.com/article/designing-web-registration-forms-for-kids</a>.
   </li>
   
+  <li>
+    Glendon, I., &amp; Baumann, M. (2014).How the WSLS-TV News Digitization 
+    Project Helped to Launch a Project Management Office. <em>Code4Lib Journal</em>, 
+    (23). Retrieved April 28, 2014 from 
+    <a href="http://journal.code4lib.org/articles/8652">http://journal.code4lib.org/articles/8652</a>.
+  </li>
+
   <li>
     Goodman, A. (2013) The Done in WordPress series. <em>ALA TechSource Blog.</em> 
     Retrieved February 17, 2014 from <a href="http://www.alatechsource.org/wordpress">
@@ -129,7 +155,7 @@
   </li>
   
   <li>
-    Halvorson, K., & Rach, M. (2012). <em>Content Strategy for the Web</em>, 
+    Halvorson, K., &amp; Rach, M. (2012). <em>Content Strategy for the Web</em>, 
     (2nd ed.). Berkeley, CA: New Riders.
   </li>
   
@@ -164,7 +190,7 @@
   </li>
 
   <li>
-    Jones, K. M. L., & Farrington, P. (2011). Using WordPress as a Library Content 
+    Jones, K. M. L., &amp; Farrington, P. (2011). Using WordPress as a Library Content 
     Management System. <em>Library Technology Reports, 47(3)</em>.
   </li>
   
@@ -203,12 +229,17 @@
   </li>
   
   <li>
-    Lehman, T., & Nikkel, T. (2008). <em>Making library Web sites usable : a LITA 
+    Lehman, T., &amp; Nikkel, T. (2008). <em>Making library Web sites usable : a LITA 
     guide.</em> New York: Neal-Schuman Publishers.
+  </li>
+  
+  <li>
+    (2013). <em>Library Project Management Toolkit</em>. Retrieved April 28, 2014
+    from <a href="https://docs.google.com/document/d/1aCZaScfh1VsvkOH4ksZDh6exzAH7n8_mMrpnw4yINcI/edit#">https://docs.google.com/document/d/1aCZaScfh1VsvkOH4ksZDh6exzAH7n8_mMrpnw4yINcI/edit#</a>.
   </li>
 
   <li>
-    Loranger, H., & Nielsen, J. (2013, February 3) Teenage Usability: Designing 
+    Loranger, H., &amp; Nielsen, J. (2013, February 3) Teenage Usability: Designing 
     Teen-Targeted Websites. <em>NN/g Nielsen Norman Group</em>  
     Retrieved April 1, 2014 from 
     <a href="http://www.nngroup.com/articles/usability-of-websites-for-teenagers/">http://www.nngroup.com/articles/usability-of-websites-for-teenagers/</a>.
@@ -226,7 +257,25 @@
   </li>
   
   <li>
-    Morville, P., & Rosenfeld, L. (2006). <em>Information architecture for the 
+    Metz, R. (2013, February 11). <em>Managing Projects...or I'm in charge, now
+    what?, Part 1</em>. Retrieved April 28, 2014 from 
+    <a href="https://docs.google.com/presentation/d/1fpqmmERvJucqgD68wR99tpCrQldK3jZ7UzbDFzJ7M_E/edit#">https://docs.google.com/presentation/d/1fpqmmERvJucqgD68wR99tpCrQldK3jZ7UzbDFzJ7M_E/edit#</a>.
+  </li>
+  
+  <li>
+    Metz, R. (2013, February 12). <em>Managing Projects...or I'm in charge, now
+    what?, Part 2</em>. Retrieved April 28, 2014 from 
+    <a href="https://docs.google.com/presentation/d/1QYLSEM7ytla7zIUpQv-PHZ_vPqoxMVWjyTjNEa0UB78/edit#">https://docs.google.com/presentation/d/1QYLSEM7ytla7zIUpQv-PHZ_vPqoxMVWjyTjNEa0UB78/edit#</a>.
+  </li>
+  
+  <li>
+    Metz, R. [rosalynmetz]. (2014, April 13). <em>LIS 861: Project Management</em>
+    [Video file]. Retrieved April 28, 2014 from 
+    <a href="https://www.youtube.com/watch?v=i_H5aLx9bJg">https://www.youtube.com/watch?v=i_H5aLx9bJg</a>.
+  </li>
+  
+  <li>
+    Morville, P., &amp; Rosenfeld, L. (2006). <em>Information architecture for the 
     World Wide Web</em>. 3rd ed. Sebastopol, Calif.: O'Reilly.
   </li>
 
@@ -238,7 +287,7 @@
   </li>
   
   <li>
-    Nicol, E. C. & O'English, M. (2012). Rising Tides: Faculty Expectations of 
+    Nicol, E. C. &amp; O'English, M. (2012). Rising Tides: Faculty Expectations of 
     Library Websites. <em>portal: Libraries and the Academy</em> 12(4), 371-386. 
     The Johns Hopkins University Press. Retrieved April 1, 2014, from Project MUSE 
     database.
@@ -303,13 +352,13 @@
   </li>
   
   <li>
-    Pew Internet & American Life Project. (2013) <em>Cell Internet Use 2013</em>.
+    Pew Internet &amp; American Life Project. (2013) <em>Cell Internet Use 2013</em>.
     Retrieved February 10, 2014 from <a href="http://pewinternet.org/Reports/2013/Cell-Internet.aspx">
     http://pewinternet.org/Reports/2013/Cell-Internet.aspx</a>.
   </li>
 
   <li>
-    Pew Internet & American Life Project. (2013) <em>Smartphone Ownership 2013</em>.
+    Pew Internet &amp; American Life Project. (2013) <em>Smartphone Ownership 2013</em>.
     Retrieved February 10, 2014 from <a href="http://pewinternet.org/Reports/2013/Smartphone-Ownership-2013.aspx">
     http://pewinternet.org/Reports/2013/Smartphone-Ownership-2013.aspx</a>.
   </li>
@@ -348,8 +397,13 @@
   </li>
 
   <li>
-    Robson, E., & Freeman, E. (2006). <em>Head first HTML with CSS & XHTML.</em> 
+    Robson, E., &amp; Freeman, E. (2006). <em>Head first HTML with CSS &amp; XHTML.</em> 
     Sebastopol, Calif.: O'Reilly.
+  </li>
+  
+  <li>
+    Rogers, J. (2012). Running effective meetings: There’s more to collaboration 
+    than just showing up. [PowerPoint slides].
   </li>
   
   <li>
@@ -371,6 +425,12 @@
   </li>
   
   <li>
+    Salo, D. (2013). Project Management. [PowerPoint slides]. Retrieved April 28, 
+    2014 from 
+    <a href="http://www.slideshare.net/cavlec/project-management-16606291">http://www.slideshare.net/cavlec/project-management-16606291</a>.
+  </li>
+  
+  <li>
     Scenarios. (n.d.). In <em>DPLA wiki</em>. Retrieved April 1, 2014, from 
     <a href="http://dp.la/wiki/Scenarios">http://dp.la/wiki/Scenarios</a>.
   </li>
@@ -389,7 +449,7 @@
   </li>
   
   <li>
-    Schmidt, A., & Etches, A. (2012). <em>User Experience (UX) Design for 
+    Schmidt, A., &amp; Etches, A. (2012). <em>User Experience (UX) Design for 
     Libraries: (THE TECH SET® #18)</em>. Chicago: ALA Editions.
   </li>
   
@@ -447,8 +507,15 @@
   </li>
   
   <li>
-    Williams, M. (2013, August 9) User Experience vs. the World. <em>New Jack Librarian.</em>  
-    Retrieved March 23, 2014 from 
+    Waters, K. (2007, September 14) How To Implement Scrum in 10 Easy Steps. 
+    <em>All About Agile: Agile Development Made Easy!</em> Retrieved April 28, 
+    2014 from 
+    <a href="http://www.allaboutagile.com/how-to-implement-scrum-in-10-easy-steps/">http://www.allaboutagile.com/how-to-implement-scrum-in-10-easy-steps/</a>.
+  </li>
+  
+  <li>
+    Williams, M. (2013, August 9) User Experience vs. the World. <em>New Jack 
+    Librarian.</em>  Retrieved March 23, 2014 from 
     <a href="http://librarian.newjackalmanac.ca/2013/08/user-experience-vs-world.html">http://librarian.newjackalmanac.ca/2013/08/user-experience-vs-world.html</a>.
   </li>
   
