draft of functions page done

--- a/Intro-via-jQuery/css/custom.css
+++ b/Intro-via-jQuery/css/custom.css
@@ -130,6 +130,11 @@ strong {
   padding-left: .25em;
 }
 
+.well button.btn {
+  margin-top: 3px;
+  margin-bottom: 3px;
+}
+
 /* Color blocks
 -------------------------------------------------- */
 
