conditionals now drafted

--- a/Intro-via-jQuery/css/custom.css
+++ b/Intro-via-jQuery/css/custom.css
@@ -67,6 +67,10 @@ strong {
   font-weight: bold;
 }
 
+.lead-grey{
+  color: #999;
+}
+
 .btn.pull-right {
   margin-left: 6px;
   padding-bottom: 6px;
